Fix episode description breaking out of box with narrow screens
Resolves #74

--- a/ui/src/components/EpisodeItem/styles.scss
+++ b/ui/src/components/EpisodeItem/styles.scss
@@ -82,6 +82,7 @@
     font-size: 18px;
     margin: 0 !important;
     padding: 10px;
+    width: 100%;
 }
 
 .episode .podcast-value {
